Fix marker's color on mobile devices

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -443,6 +443,10 @@ hr {
 .show {
   display: block !important;
 }
+
+.text-align-center {
+  text-align: center;
+}
 .invisible {
   visibility: hidden;
 }
@@ -457,6 +461,7 @@ hr {
   display: none !important;
   visibility: hidden !important;
 }
+
 .affix {
   position: fixed;
 }
