--- a/css/custom.css
+++ b/css/custom.css
@@ -221,31 +221,7 @@ button {
 /** ./List Panel **/
 
 
-/* convenience classes */
-.text-right {
-    text-align: right;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.pull-right {
-    float: right;
-}
-
-.hide {
-    display: none;
-}
-
-/*.hidden {*/
-/*height: auto !important;*/
-/*}*/
-
-/* ---- ./convenience */
-
-
-@media screen and (max-width: 480px)  {
+@media screen and (max-width: 480px )   {
     #listPanel {
         width: 100%;
         margin: 0;
@@ -269,6 +245,9 @@ button {
 
     .contactInfo {
         height: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .contactInfo p {
@@ -312,4 +291,49 @@ button {
     .modal-header button {
         float: left;
     }
+}
+
+@media screen and (max-height: 480px ) {
+
+    #list-items {
+        max-height: 200px;
+    }
+
+    .modal-footer {
+        display: none;
+    }
+}
+
+
+
+/** Rotate device css **/
+#landscape{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: #000000;
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 20000;
+    opacity: 0.9;
+}
+#landscape p {
+    background: url('../img/landscape.png') no-repeat scroll 0 0 transparent;
+    color: #FFFFFF;
+    height: 65px;
+    left: 30%;
+    padding-top: 106px;
+    position: absolute;
+    top: 20%;
+    width: 170px;
+    opacity: 1;
+}
+
+#landscape b {
+    width: 100px;
+    display: block;
+    text-align: center;
+    white-space: pre;
+
 }
